css/style.css
/* ... */
.trait_minor .t5
{
	width: 16px;
	height: 17px;
	display: block;
	background: transparent url(../images/traits/trait_numbers.png) 0px 0px no-repeat;
	position: absolute;
	top: 39px;
	left: 13px;
	z-index: 78;
}

.trait_major .t10
{
	width: 16px;
	height: 17px;
	display: block;
	background: transparent url(../images/traits/trait_numbers.png) -17px 0px no-repeat;
	position: absolute;
	top: 63px;
	left: 20px;
	z-index: 78;
}

.trait_minor .t15
{
	width: 16px;
	height: 17px;
	display: block;
	background: transparent url(../images/traits/trait_numbers.png) -35px 0px no-repeat;
	position: absolute;
	top: 39px;
	left: 13px;
	z-index: 78;
}

.trait_major .t20
{
	width: 16px;
	height: 17px;
	display: block;
	background: transparent url(../images/traits/trait_numbers.png) 0px -18px no-repeat;
	position: absolute;
	top: 63px;
	left: 20px;
	z-index: 78;
}

.trait_minor .t25
{
	width: 16px;
	height: 17px;
	display: block;
	background: transparent url(../images/traits/trait_numbers.png) -17px -18px no-repeat;
	position: absolute;
	top: 39px;
	left: 13px;
	z-index: 78;
}

.trait_major .t30
{
	width: 16px;
	height: 17px;
	display: block;
	background: transparent url(../images/traits/trait_numbers.png) -35px -18px no-repeat;
	position: absolute;
	top: 63px;
	left: 20px;
	z-index: 78;
}

.trait_bonus
{
	top: 4px;
	position: absolute;
}

#skills {
	
}

#skills * {
	overflow: hidden;
}

#skills .skillbar {
	width: 100%;
	padding-top: 49px;
	/*margin-top: -43px;
	float: left;*/
}

#skills .skillbar ul {
	display: inline-block;
	margin: 0;
}

#skills .skillbar ul li.skill {
	width: 50px;
	height: 50px;
	background: rgba(0,0,0,.75);
	border: 1px solid #000;
	border-left: 0;
	display: inline-block;
	margin: 10px 0 0 -4px;
	overflow: visible;
}

#skills .skillbar ul li.skill:first-child{
	margin-left: 0;
	border-left: 1px solid #000;
}

#skills .skillbar ul.skills_heal li.skill,
#skills .skillbar ul.skills_utility li.skill,
#skills .skillbar ul.skills_elite li.skill {
	margin-top: 0;
}

#skills .skillbar ul li.skill .skill_expand {
	position: absolute;
	height: 10px;
	width: 51px;
	background: rgba(0,0,0,.5);
	margin: -10px 0 0 -1px;
}

#skills .skillbar ul li.skill:last-child .skill_expand {
	width: 52px;
}

#skills .skillbar ul li.skill .skill_expand span {
	color: #fff;
	float: right;
	margin: 0;
	padding: 0;
	margin-top: -4px;
	height: 12px;
}

#skills .skillbar ul li.skill .skill_hotkey {
	color: #fff;
	font-size: 10px;
	background: #000;
	width: 16px;
	height: 16px;
	display: block;
	text-align: center;
	margin: 17px 0 0 17px;
	
	/* Border radius */
	-webkit-border-radius: 8px;
    border-radius: 8px;
}

#skills .skillbar .vitals {
	vertical-align: top;
	display: inline-block;
	margin: -62px -5px 0 -4px;
}

#skills .skillbar .vitals .endurance {
	margin: 0 0 -32px -1px;
	
	-webkit-border-radius: 0;
    border-radius: 0;
	
	-webkit-box-shadow: none;
    box-shadow: none;
}

#skills .skillbar .vitals .health {
	width: 100px;
	height: 100px;
	border: 1px solid rgba(0,0,0,.75);
	
	/* Border radius */
	-webkit-border-radius: 50px;
    border-radius: 50px;
	
	/* Gradient */
	background: rgb(255,7,7);
	background: -moz-linear-gradient(top,  rgb(255,7,7) 0%, rgb(150,0,0) 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(255,7,7)), color-stop(100%,rgb(150,0,0)));
	background: -webkit-linear-gradient(top,  rgb(255,7,7) 0%,rgb(150,0,0) 100%);
	background: -o-linear-gradient(top,  rgb(255,7,7) 0%,rgb(150,0,0) 100%);
	background: -ms-linear-gradient(top,  rgb(255,7,7) 0%,rgb(150,0,0) 100%);
	background: linear-gradient(to bottom,  rgb(255,7,7) 0%,rgb(150,0,0) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0707', endColorstr='#960000',GradientType=0 );
}

#skills .skillbar .vitals .health span {
	width: 100%;
	text-align: center;
	display: block;
	font-size: 18px;
	font-weight: 600;
	color: #fff;
	margin-top: 35px;
}

#skills .skillbar .skills_heal li,
#skills .skillbar .skills_utility li,
#skills .skillbar .skills_elite li {
	
}

#skills .skillbar .skills_heal li .skill_expand:hover,
#skills .skillbar .skills_utility li .skill_expand:hover,
#skills .skillbar .skills_elite li .skill_expand:hover {
	background: rgba(0,0,0,.75);
	cursor: pointer;
}











/* jQuery UI */
#build {
	float: left;
	width: 80%;
	border: 0;
	background: none;
	padding: 0;
	
	/* Border radius */
	-webkit-border-radius: 0;
    border-radius: 0;
}

#build ul {
	padding: 0;
	list-style: none;
	background: none;
	border: 0;
	
	/* Border radius */
	-webkit-border-radius: 0;
    border-radius: 0;
}

#build ul li {
	padding: 0;
	margin: 1px 0;
	background: 0;
	border: 0;
	width: 32px;
	
	/* Border radius */
	-webkit-border-radius: 0;
    border-radius: 0;
}

#build ul li a {
	padding: 0;
	margin: 0;
	cursor: pointer;
	width: 32px;
	height: 32px;
	overflow: hidden;
	background-position: left;
}

#build ul li a.character {
	background: url("../images/menu/character.png");
}

#build ul li a.traits {
	background: url("../images/menu/traits.png");
}

#build ul li a.story {
	background: url("../images/menu/story.png");
}

#build ul li a.social {
	background: url("../images/menu/social.png");
}

#build ul li a:hover,
#build ul li.ui-tabs-active a {
	background-position: right;
}

#build ul li.ui-tabs-active {
	border-right: 1px solid #413124;
	background: #413124;
	margin: 0;
	margin-right: -1px;
}

#build ul li.ui-tabs-active span.gradient-line,
#build ul li.ui-tabs-active span.color-fill {
	display: block;
}




















.scroll-content {
	position: absolute;
	top: 10px;
	left: 0;
	padding-right: 16px;
}

.scroll-pane {
	position: relative;
}

.slider-wrap {
	position: absolute;
	right: 0;
	top: 0;
	margin-top: 36px;
	width: 16px;
	background: url('../images/scrollbar/pathImage.png');
	background-position-x: -4px;
}

.slider-vertical {
	position: relative;
	height: 100%;
	border: 0;
	background: none;
	
	/* Border radius */
	-webkit-border-radius: 0;
    border-radius: 0;
}
/* ... */

